--- a/package.json
+++ b/package.json
@@ -1,35 +1,40 @@
 {
-    "name": "kraken-example-passport",
-    "version": "0.0.1",
-    "description": "A Kraken application that highlights the use of Passport middleware for Authentication",
-    "author": "@LennyMarkus",
-    "main": "index.js",
-    "scripts": {
-        "test": "grunt test",
-        "start": "node index.js"
-    },
-    "engines": {
-        "node": ">=0.10.0"
-    },
-    "dependencies": {
-        "kraken-js": "~0.6.1",
-        "express": "~3.4.4",
-        "adaro": "~0.1.x",
-        "nconf": "~0.6.8",
-        "less": "~1.3.3",
-        "dustjs-linkedin": "~2.0.3",
-        "dustjs-helpers": "~1.1.1",
-        "makara": "~0.3.0"
-    },
-    "devDependencies": {
-        "mocha": "~1.10.0",
-        "supertest": "~0.8.2",
-        "grunt": "~0.4.1",
-        "grunt-contrib-less": "~0.7.0",
-        "grunt-dustjs": "~1.1.1",
-        "grunt-contrib-clean": "~0.5.0",
-        "grunt-contrib-jshint": "~0.6.4",
-        "grunt-mocha-cli": "~1.3.0",
-        "grunt-copy-to": "0.0.10"
-    }
+  "name": "kraken-example-passport",
+  "version": "0.0.1",
+  "description": "A Kraken application that highlights the use of Passport middleware for Authentication",
+  "author": "@LennyMarkus",
+  "main": "index.js",
+  "scripts": {
+    "test": "grunt test",
+    "start": "node index.js"
+  },
+  "engines": {
+    "node": ">=0.10.0"
+  },
+  "dependencies": {
+    "kraken-js": "~0.6.1",
+    "express": "~3.4.4",
+    "adaro": "~0.1.x",
+    "nconf": "~0.6.8",
+    "less": "~1.3.3",
+    "dustjs-linkedin": "~2.0.3",
+    "dustjs-helpers": "~1.1.1",
+    "makara": "~0.3.0",
+    "mongoose": "~3.8.3",
+    "bcrypt": "~0.7.7",
+    "passport": "~0.1.17",
+    "passport-local": "~0.1.6",
+    "connect-flash": "~0.1.1"
+  },
+  "devDependencies": {
+    "mocha": "~1.10.0",
+    "supertest": "~0.8.2",
+    "grunt": "~0.4.1",
+    "grunt-contrib-less": "~0.7.0",
+    "grunt-dustjs": "~1.1.1",
+    "grunt-contrib-clean": "~0.5.0",
+    "grunt-contrib-jshint": "~0.6.4",
+    "grunt-mocha-cli": "~1.3.0",
+    "grunt-copy-to": "0.0.10"
+  }
 }
